# openremote-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci-cd.yml  docker.yml
cloudformation/: aws-cloudformation.template.yml  mvp-docker-compose-awslogs.yml
features/: cli.feature  deploy.feature  docker.feature  environment.py  manager.feature  map.feature
features/steps/: cli_steps.py  deploy_steps.py  docker_steps.py  manager_steps.py  map_steps.py
openapi/: .gitignore  openapi.yaml  package-lock.json  package.json  serverless.yml  telemetry.yml
openapi/handlers/: handler.js
openremote_cli/: cli.py  config.py  email.py  gen_aws_smtp_credentials.py  scripts.py  shell.py  testplan.py
telemetry/: package-lock.json  package.json  query.sh  serverless.yml
telemetry/handlers/: functions.js  handler.js
