[tool.poetry]
name = "openremote-cli"
version = "0.1.3"
description = "OpenRemote Command-line interface"
authors = ["Michal Rutka <michal@openremote.io>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
or = 'openremote_cli.cli:main'
openremote-cli = 'openremote_cli.cli:main'