[tool.poetry]
name = "openremote-cli"
version = "0.1.5"
description = "OpenRemote Command-line interface"
authors = ["Michal Rutka <michal@openremote.io>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^20.8b1"
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
or = 'openremote_cli.cli:main'
openremote-cli = 'openremote_cli.cli:main'

[tool.black]
skip-string-normalization = true
line-length = 79
